--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -8,8 +8,9 @@
     <title>Hello World!!</title>
 </head>
 <body>
-    <h1 class="text-red-300 ml-10 text-xl">Hello World!!</h1>
-    <h1 class="text-red-300 ml-16 text-2xl">Hello World!!</h1>
-    <h1 class="text-red-300 ml-20 text-3xl">Hello World!!</h1>
+    <h1 class="text-red-300 ml-10 text-xl">Hello World 1!!</h1>
+    <h1 class="text-red-600 ml-16 text-2xl">Hello World 2!!</h1>
+    <h1 class="text-red-900 ml-20 text-3xl">Hello World 3!!</h1>
+    <p class="text-blue-600 ml-20 text-5xl font-bold italic">Teste!</p>
 </body>
 </html>
