--- a/02_conceitos_basicos/index.html
+++ b/02_conceitos_basicos/index.html
@@ -13,5 +13,8 @@
     <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">Botão</button>
     <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Botão</button>
     <div class="w-4 md:w-6 lg:w-10 h-4 md:h-6 lg:h-10 m-4 md:m-6 lg:m-10 bg-green-400 md:bg-blue-400 lg:bg-red-400 xl:bg-gray-400"></div>
+
+    <input type="text" placeholder="Clica em mim" class="bg-gray-300 text-gray-500 focus:bg-red-600 focus:text-white-900">
+
 </body>
 </html>
