--- a/03_layout/index.html
+++ b/03_layout/index.html
@@ -10,6 +10,13 @@
 <body>
     <div class="container bg-red-600 mx-auto p-4 m-4 text-white border-red-800 border-2">
         <p>Texto do container</p>
-    </div>    
+    </div>
+
+    <div class="container bg-purple-700 border-2 border-purple-900 m-4 border-box p-10">
+        <p>Border Box</p>
+    </div>
+    <div class="container bg-green-700 border-2 border-green-900 m-4 box-content p-10">
+        <p>Box Content</p>
+    </div>
 </body>
 </html>
