--- a/03_layout/index.html
+++ b/03_layout/index.html
@@ -18,5 +18,15 @@
     <div class="container bg-green-700 border-2 border-green-900 m-4 box-content p-10">
         <p>Box Content</p>
     </div>
+
+    <!-- Display -->
+
+    <div class="container">
+        <span class="block bg-red-300">Não são elementos de Bloco</span>
+        <span class="block bg-red-300">Não são elementos de Bloco</span>
+        <div class="bg-blue-300 inline-block">Block</div>
+        <div class="bg-blue-300 inline-block">Block</div>
+        <div class="bg-red-300 hidden">Estou aparecendo</div>
+    </div>
 </body>
 </html>
