--- a/03_layout/index.html
+++ b/03_layout/index.html
@@ -28,5 +28,12 @@
         <div class="bg-blue-300 inline-block">Block</div>
         <div class="bg-red-300 hidden">Estou aparecendo</div>
     </div>
+
+    <!-- Float -->
+
+    <div class="bg-gray-500 float-right">Float Right</div>
+    <div class="bg-gray-500 float-left">Float Left</div>
+    <div class="clear-both"></div>
+    <div class="bg-gray-500 float-right">Float Right</div>
 </body>
 </html>
