--- a/03_layout/index.html
+++ b/03_layout/index.html
@@ -35,5 +35,34 @@
     <div class="bg-gray-500 float-left">Float Left</div>
     <div class="clear-both"></div>
     <div class="bg-gray-500 float-right">Float Right</div>
+
+    <!-- Overflow -->
+    <div class="overflow-hidden h-16 m-6 bg-red-300">
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+    </div>
+
+    <div class="overflow-auto h-16 m-6 bg-red-500">
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+        <p>Testando Overflow</p>
+    </div>
 </body>
 </html>
