--- a/03_layout/index.html
+++ b/03_layout/index.html
@@ -64,5 +64,14 @@
         <p>Testando Overflow</p>
         <p>Testando Overflow</p>
     </div>
+
+    <!-- Positions -->
+
+    <div class="relative bg-pink-500 p-10">
+        teste
+        <div class="absolute top-0 right-0 bg-purple-800">
+            Absolute
+        </div>
+    </div>
 </body>
 </html>
