--- a/03_layout/index.html
+++ b/03_layout/index.html
@@ -73,5 +73,15 @@
             Absolute
         </div>
     </div>
+
+    <!-- Visibility -->
+
+    <div class="container bg-red-700 invisible">
+        <p>Estou oculto</p>
+    </div>
+
+    <div class="container bg-red-700 visible">
+        <p>Estou Visível</p>
+    </div>
 </body>
 </html>
