--- a/03_layout/index.html
+++ b/03_layout/index.html
@@ -83,5 +83,12 @@
     <div class="container bg-red-700 visible">
         <p>Estou Visível</p>
     </div>
+
+    <!-- Z-index -->
+
+    <div class="container relative">
+        <div class="bg-red-300 h-20 w-20 p-6 absolute z-10">Na Frente</div>
+        <div class="bg-red-500 h-20 w-20 p-6 absolute m-4">Atráz</div>
+    </div>
 </body>
 </html>
