--- a/04_flexbox/index.html
+++ b/04_flexbox/index.html
@@ -28,5 +28,16 @@
         <div class="bg-pink-600 p-6 m-2">2</div>
         <div class="bg-pink-600 p-6 m-2">3</div>
     </div>
+
+    <!--  Wrap -->
+
+    <div class="flex flex-wrap bg-green-300">
+        <div class="bg-red-200 p-6 m-3">1</div>
+        <div class="bg-red-300 p-6 m-3">2</div>
+        <div class="bg-red-400 p-6 m-3">3</div>
+        <div class="bg-red-500 p-6 m-3">4</div>
+        <div class="bg-red-600 p-6 m-3">5</div>
+        <div class="bg-red-700 p-6 m-3">6</div>
+    </div>
 </body>
 </html>
