--- a/04_flexbox/index.html
+++ b/04_flexbox/index.html
@@ -39,5 +39,12 @@
         <div class="bg-red-600 p-6 m-3">5</div>
         <div class="bg-red-700 p-6 m-3">6</div>
     </div>
+
+    <!-- Flex -->
+    <div class="flex container mx-auto bg-blue-400 p-8">
+        <div class="flex-1 bg-green-400 p-2">1</div>
+        <div class="flex-1 bg-green-200 p-2">2</div>
+        <div class="flex-none bg-green-600 p-2">3</div>
+    </div>
 </body>
 </html>
