--- a/04_flexbox/index.html
+++ b/04_flexbox/index.html
@@ -46,5 +46,15 @@
         <div class="flex-1 bg-green-200 p-2">2</div>
         <div class="flex-none bg-green-600 p-2">3</div>
     </div>
+
+    <!-- Order -->
+    <div class="flex flex-wrap bg-purple-900">
+        <div class="bg-purple-200 p-6 m-3 order-last">1</div>
+        <div class="bg-purple-300 p-6 m-3 order-5">2</div>
+        <div class="bg-purple-400 p-6 m-3 order-4">3</div>
+        <div class="bg-purple-500 p-6 m-3 order-3">4</div>
+        <div class="bg-purple-600 p-6 m-3 order-2">5</div>
+        <div class="bg-purple-700 p-6 m-3 order-first">6</div>
+    </div>
 </body>
 </html>
