--- a/05_grid/index.html
+++ b/05_grid/index.html
@@ -18,5 +18,38 @@
         <div class="bg-green-600">1</div>
         <div class="bg-green-600">2</div>
     </div>
+
+    <div class="grid bg-green-200 grid-cols-6 p-2">
+        <div class="col-span-1 bg-green-600">1</div>
+        <div class="col-span-5 bg-green-800 p-2 text-white text-justify">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Quos, saepe. Deserunt rem exercitationem libero pariatur
+            laborum, facilis saepe minus delectus praesentium
+            quibusdam aperiam. Nemo, eum neque.?
+        </div>
+    </div>
+
+    <!-- Col Span -->
+
+    <div class="grid grid-cols-4">
+        <div class="col-span-4 bg-pink-300">
+            <p>Topo</p>
+        </div>
+        <div class="cols-span-1 bg-blue-300">
+            <p>Barra Laretal Esquerda</p>
+        </div>
+        <div class="col-span-2 bg-blue-600">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quos, saepe. Deserunt rem exercitationem libero pariatur
+                laborum, facilis saepe minus delectus praesentium
+                quibusdam aperiam. Nemo, eum neque.?</p>
+        </div>
+        <div class="col-span-1 bg-blue-800">
+            <p>Barra Lateral Direita</p>
+        </div>
+        <div class="col-span-4 bg-red-300">
+            <p>Rodapé</p>
+        </div>
+    </div>
 </body>
 </html>
