--- a/05_grid/index.html
+++ b/05_grid/index.html
@@ -51,5 +51,18 @@
             <p>Rodapé</p>
         </div>
     </div>
+
+    <!-- Grid Rows -->
+    <div class="grid grid-rows-3 grid-flow-col">
+        <div class="bg-green-400">1</div>
+        <div class="bg-green-800">2</div>
+        <div class="bg-green-400">3</div>
+        <div class="bg-green-800">4</div>
+        <div class="bg-green-400">5</div>
+        <div class="bg-green-800">6</div>
+        <div class="bg-green-400">7</div>
+        <div class="bg-green-800">8</div>
+        <div class="bg-green-400">9</div>
+    </div>
 </body>
 </html>
