--- a/05_grid/index.html
+++ b/05_grid/index.html
@@ -64,5 +64,18 @@
         <div class="bg-green-800">8</div>
         <div class="bg-green-400">9</div>
     </div>
+
+    <!-- Grid Gap -->
+    <div class="grid grid-cols-3 m-2 gap-2">
+        <div class="bg-purple-400 p-2">1</div>
+        <div class="bg-purple-800 p-2">2</div>
+        <div class="bg-purple-400 p-2">3</div>
+        <div class="bg-purple-800 p-2">4</div>
+        <div class="bg-purple-400 p-2">5</div>
+        <div class="bg-purple-800 p-2">6</div>
+        <div class="bg-purple-400 p-2">7</div>
+        <div class="bg-purple-800 p-2">8</div>
+        <div class="bg-purple-400 p-2">9</div>
+    </div>
 </body>
 </html>
