--- a/06_customization/index.html
+++ b/06_customization/index.html
@@ -8,7 +8,7 @@
     <title>Customizations</title>
 </head>
 <body>
-    <h1 class="text-black text-2xl">Este é um texto!</h1>
+    <h1 class="text-black text-2xl tablet:text-5xl tablet:text-red-800">Este é um texto!</h1>
     <h1 class="text-red text-2xl">Este é um texto!</h1>
 </body>
 </html>
