--- a/06_customization/index.html
+++ b/06_customization/index.html
@@ -11,5 +11,6 @@
     <h1 class="text-black text-2xl">Este é um texto!</h1>
     <h1 class="text-new-blue font-bold text-2xl">Este é um texto!</h1>
     <h1 class="text-gray-900 font-bold text-3xl">Texto cinza Custom</h1>
+    <h1 class="text-red-800 font-bold text-3xl p-50 m-50">Texto com padding e margin</h1>
 </body>
 </html>
