--- a/07_spotify_clone/index.html
+++ b/07_spotify_clone/index.html
@@ -10,7 +10,34 @@
     <title>Spotify: Escutar muda tudo</title>
 </head>
 <body>
-    <h1>Teste</h1>
-    <i class="fab fa-instagram"></i>
+    <!-- NAVBAR -->
+    <header>
+        <div class="flex fixed bg-black w-full px-3 md:px-20 py-4">
+            <div class="container flex items-center mx-auto">
+                <div>
+                    <a href="#">
+                        <img src="src/img/spotify-logo.png" alt="Spotfy" class="w-20 md:w-125px">
+                    </a>
+                </div>
+                <div class="flex flex-1 justify-end text-white text-3xl md:hidden">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <div class="flex-1 items-end text-white font-bold hidden md:flex">
+                    <nav class="flex-1">
+                        <ul class="flex justify-end flex-1">
+                            <li class="px-4"><a class="hover:text-hoverspt text-sm" href="#">Premium</a></li>
+                            <li class="px-4"><a class="hover:text-hoverspt text-sm" href="#">Suporte</a></li>
+                            <li class="px-4"><a class="hover:text-hoverspt text-sm" href="#">Baixar</a></li>
+                            <li class="px-4"><span class="border-r border-white"></span></li>
+                            <li class="px-4"><a class="hover:text-hoverspt text-sm" href="#">Inscrever-se</a></li>
+                            <li class="px-4"><a class="hover:text-hoverspt text-sm" href="#">Entrar</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- CONTEÚDO -->
+    <!-- RODAPÉ -->
 </body>
 </html>
