Grid Align and Space

--- a/08_spacing_aligment/index.html
+++ b/08_spacing_aligment/index.html
@@ -99,6 +99,41 @@
         <div class="bg-green-700 m-2 p-2">3</div>
     </div>
 
+    <!--  Alinhamento e Espaçamento de id -->
+
+    <div class="bg-blue-300 grid grid-cols-2 md:grid-cols-4 h-40 place-content-start">
+        <div class="bg-blue-600 m-2 p-2">1</div>
+        <div class="bg-blue-600 m-2 p-2">2</div>
+        <div class="bg-blue-600 m-2 p-2">3</div>
+        <div class="bg-blue-600 m-2 p-2">4</div>
+        <div class="bg-blue-600 m-2 p-2">5</div>
+        <div class="bg-blue-600 m-2 p-2">6</div>
+    </div>
+
+    <div class="bg-gray-300 grid grid-cols-3 h-60 place-content-between">
+        <div class="bg-gray-600 m-2 p-2">1</div>
+        <div class="bg-gray-600 m-2 p-2">2</div>
+        <div class="bg-gray-600 m-2 p-2">3</div>
+        <div class="bg-gray-600 m-2 p-2">4</div>
+        <div class="bg-gray-600 m-2 p-2">5</div>
+        <div class="bg-gray-600 m-2 p-2">6</div>
+        <div class="bg-gray-600 m-2 p-2">7</div>
+        <div class="bg-gray-600 m-2 p-2">8</div>
+        <div class="bg-gray-600 m-2 p-2">9</div>
+    </div>
+    
+    <div class="bg-indigo-300 grid grid-cols-3 h-60 place-content-around">
+        <div class="bg-indigo-600 m-2 p-2">1</div>
+        <div class="bg-indigo-600 m-2 p-2">2</div>
+        <div class="bg-indigo-600 m-2 p-2">3</div>
+        <div class="bg-indigo-600 m-2 p-2">4</div>
+        <div class="bg-indigo-600 m-2 p-2">5</div>
+        <div class="bg-indigo-600 m-2 p-2">6</div>
+        <div class="bg-indigo-600 m-2 p-2">7</div>
+        <div class="bg-indigo-600 m-2 p-2">8</div>
+        <div class="bg-indigo-600 m-2 p-2">9</div>
+    </div>
+
     <p class="m-10">Espaçamento</p>
     <p class="m-10">Espaçamento</p>
     <p class="m-10">Espaçamento</p>
