--- a/08_spacing_aligment/index.html
+++ b/08_spacing_aligment/index.html
@@ -184,6 +184,15 @@
         <div class="bg-gray-600 m-2 p-2">9</div>
     </div>
 
+    <!-- Padding -->
+    <div class="bg-yellow-600 h-40 p-10">
+        <span class="bg-yellow-800 p-4">Padding</span>
+        <span class="bg-yellow-900 px-4">Padding X</span>
+        <span class="bg-yellow-900 py-4">Padding Y</span>
+        <span class="bg-yellow-900 px-4 py-2">Botão</span>
+        <span class="bg-yellow-900 pl-4 pt-6 pb-10 pr-2">Padding Custom</span>
+    </div>
+
     <p class="m-10">Espaçamento</p>
     <p class="m-10">Espaçamento</p>
     <p class="m-10">Espaçamento</p>
