--- a/08_spacing_aligment/index.html
+++ b/08_spacing_aligment/index.html
@@ -193,6 +193,20 @@
         <span class="bg-yellow-900 pl-4 pt-6 pb-10 pr-2">Padding Custom</span>
     </div>
 
+    <!-- Margin -->
+    <div class="w-20 h-10 bg-green-900 text-white text-center m-5">
+        Margin
+    </div>
+    <div class="w-40 h-10 bg-green-900 text-white text-center mx-10 my-4">
+        Margin X e X
+    </div>
+    <div class="w-40 h-10 bg-green-900 text-white text-center mx-auto my-4">
+        Margin X Auto
+    </div>
+    <div class="w-40 h-10 bg-pink-900 text-white text-center mt-10 ml-5 mb-8">
+        Margin Custom
+    </div>
+
     <p class="m-10">Espaçamento</p>
     <p class="m-10">Espaçamento</p>
     <p class="m-10">Espaçamento</p>
