--- a/08_spacing_aligment/index.html
+++ b/08_spacing_aligment/index.html
@@ -207,6 +207,19 @@
         Margin Custom
     </div>
 
+    <!-- Understanding Width -->
+    <div class="bg-blue-700 text-white p-4">
+        Max Width
+    </div>
+    
+    <div class="bg-blue-700 text-white p-4 max-w-5xl">
+        Max Width
+    </div>
+    
+    <div class="bg-blue-400 text-white p-4 w-40 min-w-full">
+        Min Width
+    </div>
+
     <p class="m-10">Espaçamento</p>
     <p class="m-10">Espaçamento</p>
     <p class="m-10">Espaçamento</p>
