--- a/08_spacing_aligment/index.html
+++ b/08_spacing_aligment/index.html
@@ -220,6 +220,17 @@
         Min Width
     </div>
 
+    <!-- Understanding Height -->
+    <div class="bg-red-400 text-white p-4 h-20">
+        Height
+    </div>
+    <div class="bg-green-400 text-white p-4 min-h-screen">
+        Min Height
+    </div>
+    <div class="bg-red-400 text-white p-4 h-64 max-h-screen">
+        Max Height
+    </div>
+
     <p class="m-10">Espaçamento</p>
     <p class="m-10">Espaçamento</p>
     <p class="m-10">Espaçamento</p>
