--- a/09_tipography/index.html
+++ b/09_tipography/index.html
@@ -12,5 +12,12 @@
     <div class="text-xl font-sans">Testando Fonte sem Serifa</div>
     <div class="text-xl font-mono">Testando Fonte monospace</div>
     <div class="text-xl font-arial">Testando Fonte Arial</div>
+
+    <!-- Font Size -->
+    <div class="font-arial text-xs">Tamanho da Fonte</div>
+    <div class="font-arial text-lg">Tamanho da Fonte</div>
+    <div class="font-arial text-2xl">Tamanho da Fonte</div>
+    <div class="font-arial text-6xl">Tamanho da Fonte</div>
+    <div class="font-arial text-12xl">Tamanho da Fonte</div>
 </body>
 </html>
