--- a/09_tipography/index.html
+++ b/09_tipography/index.html
@@ -8,16 +8,24 @@
     <title>Tipography</title>
 </head>
 <body>
-    <div class="text-xl font-serif">Testando Fonte Serifada</div>
-    <div class="text-xl font-sans">Testando Fonte sem Serifa</div>
-    <div class="text-xl font-mono">Testando Fonte monospace</div>
-    <div class="text-xl font-arial">Testando Fonte Arial</div>
+    <p class="text-xl font-serif">Testando Fonte Serifada</p>
+    <p class="text-xl font-sans">Testando Fonte sem Serifa</p>
+    <p class="text-xl font-mono">Testando Fonte monospace</p>
+    <p class="text-xl font-arial">Testando Fonte Arial</p>
 
     <!-- Font Size -->
-    <div class="font-arial text-xs">Tamanho da Fonte</div>
-    <div class="font-arial text-lg">Tamanho da Fonte</div>
-    <div class="font-arial text-2xl">Tamanho da Fonte</div>
-    <div class="font-arial text-6xl">Tamanho da Fonte</div>
-    <div class="font-arial text-12xl">Tamanho da Fonte</div>
+    <p class="font-arial text-xs">Tamanho da Fonte</p>
+    <p class="font-arial text-lg">Tamanho da Fonte</p>
+    <p class="font-arial text-2xl">Tamanho da Fonte</p>
+    <p class="font-arial text-6xl">Tamanho da Fonte</p>
+    <p class="font-arial text-12xl">Tamanho da Fonte</p>
+
+    <!-- Font Weight -->
+    <p class="text-xl italic">Texto em Itálico</p>
+    <p class="text-xl italic font-bold">Texto em Itálico</p>
+    <p class="text-xl font-hairline">Texto em weight 100</p>
+    <p class="text-xl font-black">Texto em weight 900</p>
+    <p class="text-xl font-bold">Texto em weight 600</p>
+    <p class="text-xl font-semibold">Texto em weight 500</p>
 </body>
 </html>
