--- a/09_tipography/index.html
+++ b/09_tipography/index.html
@@ -27,5 +27,16 @@
     <p class="text-xl font-black">Texto em weight 900</p>
     <p class="text-xl font-bold">Texto em weight 600</p>
     <p class="text-xl font-semibold">Texto em weight 500</p>
+
+    <!-- Letter Spacing -->
+    <p class="text-2xl">Espaçamento entre letras Comparativo</p>
+    <p class="text-2xl tracking-tighter">Espaçamento entre letras Menor</p>
+    <p class="text-2xl tracking-widest">Espaçamento entre letras Maior</p>
+
+    <p class="text-2xl w-64 bg-green-300 leading-tight">Espaçamento entre linhas, mais algumas palavras para testar. MENOR</p>
+    <p class="text-2xl w-64 bg-blue-300">Espaçamento entre linhas, mais algumas palavras para testar. COMPARATIVO</p>
+    <p class="text-2xl w-64 bg-red-300 leading-loose">Espaçamento entre linhas, mais algumas palavras para testar. MAIOR</p>
+
+
 </body>
 </html>
