--- a/09_tipography/index.html
+++ b/09_tipography/index.html
@@ -37,6 +37,27 @@
     <p class="text-2xl w-64 bg-blue-300">Espaçamento entre linhas, mais algumas palavras para testar. COMPARATIVO</p>
     <p class="text-2xl w-64 bg-red-300 leading-loose">Espaçamento entre linhas, mais algumas palavras para testar. MAIOR</p>
 
+    <!-- Lists -->
+    <ul class="list-disc m-10 bg-yellow-600">
+        <li>Carro</li>
+        <li>Avião</li>
+        <li>Barco</li>
+        <li>Navio</li>
+    </ul>
+
+    <ul class="list-decimal list-inside m-10 bg-red-700">
+        <li>Carro</li>
+        <li>Avião</li>
+        <li>Barco</li>
+        <li>Navio</li>
+    </ul>
+    
+    <ul class="list-none m-10">
+        <li>Carro</li>
+        <li>Avião</li>
+        <li>Barco</li>
+        <li>Navio</li>
+    </ul>
 
 </body>
 </html>
