--- a/09_tipography/index.html
+++ b/09_tipography/index.html
@@ -59,5 +59,12 @@
         <li>Navio</li>
     </ul>
 
+    <!-- Placeholder -->
+
+    <div class="m-4">
+        <input type="text" placeholder="Este é o Placeholder!" class="placeholder-red-800 placeholder-opacity-80">
+        <input type="text" placeholder="Este é o Placeholder!" class="placeholder-blue-800 placeholder-opacity-80">
+    </div>
+
 </body>
 </html>
