--- a/09_tipography/index.html
+++ b/09_tipography/index.html
@@ -66,5 +66,10 @@
         <input type="text" placeholder="Este é o Placeholder!" class="placeholder-blue-800 placeholder-opacity-80">
     </div>
 
+    <!-- Text Align -->
+    <p class="bg-purple-600 text-2xl text-white text-left">Texto a Esquerda</p>
+    <p class="bg-purple-700 text-2xl text-white text-center">Texto no Centro</p>
+    <p class="bg-purple-800 text-2xl text-white text-right">Texto a Direita</p>
+
 </body>
 </html>
