--- a/09_tipography/index.html
+++ b/09_tipography/index.html
@@ -71,5 +71,20 @@
     <p class="bg-purple-700 text-2xl text-white text-center">Texto no Centro</p>
     <p class="bg-purple-800 text-2xl text-white text-right">Texto a Direita</p>
 
+    <!-- Text Color -->
+    <div class="bg-red-800">
+        <p class="text-2xl text-indigo-50">Testando Indigo</p>
+        <p class="text-2xl text-indigo-100">Testando Indigo</p>
+        <p class="text-2xl text-indigo-200">Testando Indigo</p>
+        <p class="text-2xl text-indigo-300">Testando Indigo</p>
+        <p class="text-2xl text-indigo-400">Testando Indigo</p>
+        <p class="text-2xl text-indigo-500">Testando Indigo</p>
+        <p class="text-2xl text-indigo-600">Testando Indigo</p>
+        <p class="text-2xl text-indigo-700">Testando Indigo</p>
+        <p class="text-2xl text-indigo-800">Testando Indigo</p>
+        <p class="text-2xl text-indigo-900">Testando Indigo</p>
+    </div>
+    
+
 </body>
 </html>
