--- a/09_tipography/index.html
+++ b/09_tipography/index.html
@@ -84,7 +84,13 @@
         <p class="text-2xl text-indigo-800">Testando Indigo</p>
         <p class="text-2xl text-indigo-900">Testando Indigo</p>
     </div>
-    
+
+
+    <!-- Text Decoration -->
+    <p class="text-2xl underline">Underline</p>    
+    <p class="text-2xl line-through">Line Trough</p>    
+    <p class="text-2xl lowercase">LOWERCASE</p>    
+    <p class="text-2xl uppercase">Lowercase</p>    
 
 </body>
 </html>
