--- a/10_backgrounds/index.html
+++ b/10_backgrounds/index.html
@@ -17,7 +17,7 @@
     <p class="text-white p-10">Testando</p>
     <p class="text-white p-10">Testando</p>
     <p class="text-white p-10">Testando</p>
-    
+
     <div class="h-48 overflow-auto bg-local" style="background-image: url(src/img/bg_cidade.jpg);">
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
@@ -36,5 +36,22 @@
     <p class="text-white p-10">Testando</p>
     <p class="text-white p-10">Testando</p>
     <p class="text-white p-10">Testando</p>
+
+    <div class="p-2 bg-black text-white">Divisão</div>
+
+    <div class="h-10 bg-green-100"></div>
+    <div class="h-10 bg-green-200"></div>
+    <div class="h-10 bg-green-300"></div>
+    <div class="h-10 bg-green-400"></div>
+    <div class="h-10 bg-green-500"></div>
+    <div class="h-10 bg-green-600"></div>
+    <div class="h-10 bg-green-700"></div>
+    <div class="h-10 bg-green-800"></div>
+    <div class="h-10 bg-green-900"></div>
+    <div class="h-10 bg-green-900 bg-opacity-0"></div>
+    <div class="h-10 bg-green-900 bg-opacity-25"></div>
+    <div class="h-10 bg-green-900 bg-opacity-50"></div>
+
+
 </body>
 </html>
