--- a/10_backgrounds/index.html
+++ b/10_backgrounds/index.html
@@ -52,6 +52,40 @@
     <div class="h-10 bg-green-900 bg-opacity-25"></div>
     <div class="h-10 bg-green-900 bg-opacity-50"></div>
 
+    <!-- Background Position -->
+    <div class="h-48 overflow-auto bg-bottom" style="background-image: url(src/img/bg_cidade.jpg);">
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+    </div>
+    <div class="h-48 overflow-auto bg-right-bottom" style="background-image: url(src/img/bg_cidade.jpg);">
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+    </div>
+    <div class="h-48 overflow-auto bg-center" style="background-image: url(src/img/bg_cidade.jpg);">
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+    </div>
+    <div class="h-48 overflow-auto bg-center bg-no-repeat" style="background-image: url(src/img/tailwind.png);">
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+    </div>
+    <div class="h-48 overflow-auto bg-local bg-center bg-repeat-y" style="background-image: url(src/img/tailwind.png);">
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+        <p class="text-white p-10">Testando</p>
+    </div>
 
 </body>
 </html>
