--- a/10_backgrounds/index.html
+++ b/10_backgrounds/index.html
@@ -87,5 +87,11 @@
         <p class="text-white p-10">Testando</p>
     </div>
 
+    <!-- Background Size -->
+    <div class="h-48 bg-cover bg-center" style="background-image: url(src/img/bg_cidade.jpg);">
+    </div>
+    <div class="h-48 bg-contain bg-no-repeat bg-center" style="background-image: url(src/img/bg_cidade.jpg);">
+    </div>
+
 </body>
 </html>
