--- a/10_backgrounds/index.html
+++ b/10_backgrounds/index.html
@@ -8,7 +8,7 @@
     <title>Backgrounds</title>
 </head>
 <body>
-    <div class="h-48 overflow-auto bg-fixed" style="background-image: url(src/img/bg_cidade.jpg);">
+    <div class="h-48 overflow-auto bg-fixed bg-cidade">
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
@@ -18,7 +18,7 @@
     <p class="text-white p-10">Testando</p>
     <p class="text-white p-10">Testando</p>
 
-    <div class="h-48 overflow-auto bg-local" style="background-image: url(src/img/bg_cidade.jpg);">
+    <div class="h-48 overflow-auto bg-local bg-cidade">
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
@@ -28,7 +28,7 @@
     <p class="text-white p-10">Testando</p>
     <p class="text-white p-10">Testando</p>
     <p class="text-white p-10">Testando</p>
-    <div class="h-48 overflow-auto bg-fixed" style="background-image: url(src/img/bg_cidade.jpg);">
+    <div class="h-48 overflow-auto bg-fixed bg-cidade">
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
@@ -53,27 +53,27 @@
     <div class="h-10 bg-green-900 bg-opacity-50"></div>
 
     <!-- Background Position -->
-    <div class="h-48 overflow-auto bg-bottom" style="background-image: url(src/img/bg_cidade.jpg);">
+    <div class="h-48 overflow-auto bg-bottom bg-cidade">
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
     </div>
-    <div class="h-48 overflow-auto bg-right-bottom" style="background-image: url(src/img/bg_cidade.jpg);">
+    <div class="h-48 overflow-auto bg-right-bottom bg-cidade">
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
     </div>
-    <div class="h-48 overflow-auto bg-center" style="background-image: url(src/img/bg_cidade.jpg);">
+    <div class="h-48 overflow-auto bg-center bg-cidade">
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
     </div>
-    <div class="h-48 overflow-auto bg-center bg-no-repeat" style="background-image: url(src/img/tailwind.png);">
+    <div class="h-48 overflow-auto bg-center bg-no-repeat bg-tailwind">
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
     </div>
-    <div class="h-48 overflow-auto bg-local bg-center bg-repeat-y" style="background-image: url(src/img/tailwind.png);">
+    <div class="h-48 overflow-auto bg-local bg-center bg-repeat-y bg-tailwind">
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
         <p class="text-white p-10">Testando</p>
@@ -88,10 +88,15 @@
     </div>
 
     <!-- Background Size -->
-    <div class="h-48 bg-cover bg-center" style="background-image: url(src/img/bg_cidade.jpg);">
+    <div class="h-48 bg-cover bg-center bg-cidade">
     </div>
-    <div class="h-48 bg-contain bg-no-repeat bg-center" style="background-image: url(src/img/bg_cidade.jpg);">
+    <div class="h-48 bg-contain bg-no-repeat bg-center bg-cidade">
     </div>
+
+    <!-- Gradients -->
+
+    <div class="h-48 bg-gradient-to-tr from-gray-700 to-red-400"></div>
+    <div class="h-48 bg-gradient-to-b from-blue-500 via-green-600 to-yellow-400"></div>
 
 </body>
 </html>
