--- a/11_facebook_clone/index.html
+++ b/11_facebook_clone/index.html
@@ -17,7 +17,27 @@
                     <p class="hidden md:flex text-subtitle leading-8 w-500px pr-6">O Facebook ajuda você a se conectar e compartilhar com as pessoas que fazem parte da sua vida.</p>
                 </div>
                 <div class="md:w-396px md:place-self-end">
-                    <p>Teste 2</p>
+                    <div class="p-4 md:border md:shadow-xl rounded-md bg-white">
+                        <form action="" class="flex flex-col">
+                            <input type="text" placeholder="Email ou telefone" class="flex-1 mb-2 md:mb-3 p-3 rounded md:rounded-md border border-gray-300 bg-gray-200 md:bg-white text-sm md:text-base placeholder-gray-400 md:placeholder-gray-500">
+                            
+                            <input type="password" placeholder="Senha" class="flex-1 md:mb-3 p-3 rounded md:rounded-md border border-gray-300 bg-gray-200 md:bg-white text-sm md:text-base placeholder-gray-400 md:placeholder-gray-500">
+
+                            <input type="submit" value="Entrar" class="flex-1 mb-3 py-3 px-3 rounded-md bg-main-blue hover:bg-main-blue-hover font-semibold text-white text-xl">
+                        </form>
+
+                        <div class="flex flex-col divide-y divide-gray-400 text-center mt-2 md:mt-0">
+                            <div class="pb-4 order-2 md:order-1">
+                                <a class="text-blue-600 hover:underline" href="#">Esqueceu a senha?</a>
+                            </div>
+                            <div class="pb-6 pt-8 order-1 md:order-2">
+                                <a class="py-3 px-4 bg-main-green hover:bg-main-green-hover text-white text-md md:text-lg font-bold rounded" href="#">Criar nova conta</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="hideen md:block text-sm mt-5 text-center">
+                        <p><a class="font-bold" href="#">Criar uma Página</a> para uma celebridade, banda ou empresa.</p>
+                    </div>
                 </div>
             </div>
         </div>
