--- a/11_facebook_clone/index.html
+++ b/11_facebook_clone/index.html
@@ -23,7 +23,7 @@
                             
                             <input type="password" placeholder="Senha" class="flex-1 md:mb-3 p-3 rounded md:rounded-md border border-gray-300 bg-gray-200 md:bg-white text-sm md:text-base placeholder-gray-400 md:placeholder-gray-500">
 
-                            <input type="submit" value="Entrar" class="flex-1 mb-3 py-3 px-3 rounded-md bg-main-blue hover:bg-main-blue-hover font-semibold text-white text-xl">
+                            <input type="submit" value="Entrar" class="flex-1 mt-3 py-3 px-3 rounded-md bg-main-blue hover:bg-main-blue-hover font-semibold text-white text-xl">
                         </form>
 
                         <div class="flex flex-col divide-y divide-gray-400 text-center mt-2 md:mt-0">
@@ -35,12 +35,134 @@
                             </div>
                         </div>
                     </div>
-                    <div class="hideen md:block text-sm mt-5 text-center">
+                    <div class="hidden md:block text-sm mt-5 text-center">
                         <p><a class="font-bold" href="#">Criar uma Página</a> para uma celebridade, banda ou empresa.</p>
                     </div>
                 </div>
             </div>
         </div>
     </main>
+    <footer>
+        <div class="md:w-980px mx-auto py-8 text-center md:text-current">
+            <div>
+                <ul class="grid grid-cols-2 md:flex text-gray-600 text-xs md:text-sm">
+                    <li class="mr-3">
+                        <a href="#" class="hover:underline">Português (Brazil)</a>
+                      </li>
+                      <li class="mr-3">
+                        <a href="#" class="hover:underline">English (US)</a>
+                      </li>
+                      <li class="mr-3">
+                        <a href="#" class="hover:underline">Español</a>
+                      </li>
+                      <li class="mr-3">
+                        <a href="#" class="hover:underline">Français (France)</a>
+                      </li>
+                      <li class="mr-3">
+                        <a href="#" class="hover:underline">Italiano</a>
+                      </li>
+                </ul>
+            </div>
+            <div>
+                <div class="hidden md:block border-t border-gray-400 pt-3 mt-3">
+                    <ul class="hidden md:flex md:flex-wrap text-gray-600 text-sm">
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Cadastre-se</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Entrar</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Messenger</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Facebook Lite</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Watch</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Pessoas</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Páginas</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Categorias de Página</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Locais</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Jogos</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Marketplace</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Facebook Play</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Grupos</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Oculos</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Portal</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Instagram</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Local</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Campanhas de arrecadação de fundos</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Serviços</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Central de informações de Votação</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Sobre</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Criar anúncios</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Criar página</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Desenvolvedores</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Carreiras</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Privacidade</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Cookies</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Escolha para anúncios</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Termos</a>
+                          </li>
+                          <li class="mr-3">
+                            <a href="#" class="hover:underline">Ajuda</a>
+                          </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="pt-4 text-xs text-gray-600 text-center md:text-left">
+                <p>Facebook &copy; 2021</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
