--- a/12_borders/index.html
+++ b/12_borders/index.html
@@ -18,5 +18,12 @@
         <span class="bg-green-400 w-20 h-20 block m-4 rounded-full">Circular</span>
         <span class="bg-green-400 w-40 h-20 block m-4 rounded-full">Pilula</span>
     </div>
+
+    <!-- Largura e Cor -->
+    <div>
+        <span class="bg-blue-600 w-20 h-10 block m-4 text-center text-white border-4 border-blue-800 rounded-lg">Pilula</span>
+    </div>
+
+
 </body>
 </html>
