--- a/12_borders/index.html
+++ b/12_borders/index.html
@@ -39,6 +39,20 @@
         <span class="bg-purple-600 w-40 h-10 block m-4 text-center text-white border-4 border-purple-800 border-dashed">Border Dashed</span>
     </div>
 
+    <!-- Divide -->
+    <div class="grid grid-cols-4 divide-x-4 divide-blue-800 divide-dotted">
+        <div class="text-center">1</div>
+        <div class="text-center">2</div>
+        <div class="text-center">3</div>
+        <div class="text-center">4</div>
+    </div>
+
+    <div class="divide-y-2 divide-purple-300 divide-dashed">
+        <p>Testando</p>
+        <p>Testando</p>
+        <p>Testando</p>
+        <p>Testando</p>
+    </div>
 
 </body>
 </html>
