--- a/12_borders/index.html
+++ b/12_borders/index.html
@@ -54,5 +54,12 @@
         <p>Testando</p>
     </div>
 
+    <!-- Shadows -->
+    <div class="bg-gray-400 p-5">
+        <div class="w-20 h-20 m-6 shadow-xs">Sombra Pequena</div>
+        <div class="w-20 h-20 m-6 shadow">Sombra Média</div>
+        <div class="w-20 h-20 m-6 shadow-2xl">Sombra Média</div>
+    </div>
+
 </body>
 </html>
