--- a/13_interactivity/index.html
+++ b/13_interactivity/index.html
@@ -16,5 +16,12 @@
             <option value="">Teste</option>
         </select>
     </div>
+    
+    <!-- Cursor -->
+    <div class="h-20 bg-red-200">Cursor Normal</div>
+    <div class="h-20 bg-red-400 cursor-pointer">Cursor Pinter</div>
+    <div class="h-20 bg-red-400 cursor-wait">Cursor Wait</div>
+    <div class="h-20 bg-red-400 cursor-not-allowed">Cursor Not Allowed</div>
+    <div class="h-20 bg-red-400 cursor-text">Cursor Text</div>
 </body>
 </html>
