--- a/13_interactivity/index.html
+++ b/13_interactivity/index.html
@@ -23,5 +23,11 @@
     <div class="h-20 bg-red-400 cursor-wait">Cursor Wait</div>
     <div class="h-20 bg-red-400 cursor-not-allowed">Cursor Not Allowed</div>
     <div class="h-20 bg-red-400 cursor-text">Cursor Text</div>
+
+    <!-- Outline -->
+    <div class="p-5 bg-green-300">
+        <input type="text" placeholder="Clica em mim!" class="outline-none">
+        <input type="text" placeholder="Clica em mim!">
+    </div>
 </body>
 </html>
