--- a/13_interactivity/index.html
+++ b/13_interactivity/index.html
@@ -29,5 +29,21 @@
         <input type="text" placeholder="Clica em mim!" class="outline-none">
         <input type="text" placeholder="Clica em mim!">
     </div>
+
+    <!-- Pointer Events -->
+    <div class="p-5 bg-purple-300">
+        <select class="pointer-events-none">
+            <option value="">Teste</option>
+        </select>
+        <select>
+            <option value="">Teste</option>
+        </select>
+    </div>
+
+    <div class="p-5 bg-blue-300">
+        <textarea class="pointer-events-none">Edite-me</textarea>
+        <textarea>Edite-me</textarea>
+    </div>
+    
 </body>
 </html>
