--- a/13_interactivity/index.html
+++ b/13_interactivity/index.html
@@ -44,6 +44,14 @@
         <textarea class="pointer-events-none">Edite-me</textarea>
         <textarea>Edite-me</textarea>
     </div>
+
+    <!-- Resize -->
+    <div class="p-5 bg-red-300">
+        <textarea class="resize-none">Redimensione a textarea</textarea>
+        <textarea class="resize-x">Redimensione a textarea</textarea>
+        <textarea class="resize-y">Redimensione a textarea</textarea>
+        <textarea class="resize">Redimensione a textarea</textarea>
+    </div>
     
 </body>
 </html>
