--- a/13_interactivity/index.html
+++ b/13_interactivity/index.html
@@ -52,6 +52,12 @@
         <textarea class="resize-y">Redimensione a textarea</textarea>
         <textarea class="resize">Redimensione a textarea</textarea>
     </div>
+
+    <!-- Limit Selection -->
+    <div class="p-5 bg-green-300">
+        <p class="select-none">Este paragrafo não pode ser Selecionado!</p>
+        <p class="select-all">Este paragrafo é selecionado ao clicar!</p>
+    </div>
     
 </body>
 </html>
