--- a/14_amazon_clone/index.html
+++ b/14_amazon_clone/index.html
@@ -10,7 +10,7 @@
     <title>Amazon</title>
 </head>
 <body>
-    <h1 class="bg-red-500">Teste</h1>
+    <h1 class="bg-darkblue-600">Teste</h1>
     <i class="fas fa-search"></i>
 </body>
 </html>
