--- a/14_amazon_clone/index.html
+++ b/14_amazon_clone/index.html
@@ -65,7 +65,7 @@
             <!-- HEADER INTERMEDIÁRIO -->
             <div class="flex bg-darkblue-600 text-sm px-2 py-1 items-center">
                 <!-- Selecione o Endereço -->
-                <div class="flex items-center border border-transparent hover:border-white rounded-sm py-2 px-2 md:py-0">
+                <div class="address-container">
                     <div class="mr-1">
                         <i class="fas fa-map-marker-alt text-xl"></i>
                     </div>
@@ -78,12 +78,12 @@
                 <div class="hidden md:block">
                     <nav>
                         <ul class="flex ml-10 text-sm">
-                            <li class="mr-2 border border-transparent hover:border-white rounded-sm px-2 py-1">Mais Vendidos</li>
-                            <li class="mr-2 border border-transparent hover:border-white rounded-sm px-2 py-1">Livros</li>
-                            <li class="mr-2 border border-transparent hover:border-white rounded-sm px-2 py-1">Ofertas do Dia</li>
-                            <li class="mr-2 border border-transparent hover:border-white rounded-sm px-2 py-1">Atendimento ao Cliente</li>
-                            <li class="mr-2 border border-transparent hover:border-white rounded-sm px-2 py-1">Eletrônicos</li>
-                            <li class="mr-2 border border-transparent hover:border-white rounded-sm px-2 py-1">Ideias para Presente</li>
+                            <li class="item-nav-mid">Mais Vendidos</li>
+                            <li class="item-nav-mid">Livros</li>
+                            <li class="item-nav-mid">Ofertas do Dia</li>
+                            <li class="item-nav-mid">Atendimento ao Cliente</li>
+                            <li class="item-nav-mid">Eletrônicos</li>
+                            <li class="item-nav-mid">Ideias para Presente</li>
                         </ul>
                     </nav>
                 </div>
