--- a/14_amazon_clone/index.html
+++ b/14_amazon_clone/index.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <!-- Busca Topo -->
-                <div class="w-full md:w-auto flex-grow md:ml-3 mr:0 pt-1 md:pt-0 order-2 md:order-none">
+                <div class="w-full md:w-auto flex-grow md:ml-3 mr:0 pt-1 pb-2 md:pb-0 md:pt-0 order-2 md:order-none">
                     <form action="" class="flex">
                         <select class="hidden md:block p-2 text-xs text-gray-700 bg-gray-100 hover:bg-gray-300 rounded-tl rounded-bl border-r border-gray-500">
                             <option value="">Livros</option>
@@ -87,6 +87,42 @@
                         </ul>
                     </nav>
                 </div>
+            </div>
+
+            <!-- HEADER INFERIOR -->
+            <div class="flex text-black px-4 text-xs border-b border-gray-300 bg-gray-100 pt-1">
+                <a class="block md:hidden py-2 font-bold" href="#">
+                    <i class="fas fa-chevron-left mr-1"></i> Veja todos os departamentos                    
+                </a>
+                <ul class="hidden md:flex">
+                    <li class="item-nav-inf">
+                        <a href="#">Livros</a>
+                    </li>
+                    <li class="item-nav-inf">
+                        <a href="#">Pesquisa Avançada</a>
+                    </li>
+                    <li class="item-nav-inf">
+                        <a href="#">Mais Vendidos</a>
+                    </li>
+                    <li class="item-nav-inf">
+                        <a href="#">Pré-venda e Lançamentos</a>
+                    </li>
+                    <li class="item-nav-inf">
+                        <a href="#">Inglês e Outras Linguas</a>
+                    </li>
+                    <li class="item-nav-inf">
+                        <a href="#">Loja Geek</a>
+                    </li>
+                    <li class="item-nav-inf">
+                        <a href="#">Universitários e Acadêmicos</a>
+                    </li>
+                    <li class="item-nav-inf">
+                        <a href="#">Didáticos e Escolares</a>
+                    </li>
+                    <li class="item-nav-inf">
+                        <a href="#">Loja Infantil</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </header>
