--- a/14_amazon_clone/index.html
+++ b/14_amazon_clone/index.html
@@ -130,7 +130,7 @@
     <main>
         <div class="grid grid-cols-6">
             <!-- Navbar Esquerda -->
-            <div class="col-span-1 hidden h-screen md:block pl-2 my-2 border-r border-gray-300 text-xs">
+            <div class="col-span-1 hidden md:block pl-2 my-2 border-r border-gray-300 text-xs">
                 <h3 class="font-bold">Destaque em livros</h3>
                 <ul class="pl-2 mb-2">
                     <li class="text-gray-800 hover:text-orange-650">
@@ -209,7 +209,44 @@
             </div>
 
             <!-- Conteúdo do Site -->
-            <div class="col-span-5 h-screen"></div>
+            <div class="col-span-6 md:col-span-5 bg-gray-200 p-2">
+                <div class="flex flex-col">
+                    <!-- Título e Categorias -->
+                    <div class="text-center">
+                        <h2 class="text-2xl font-bold md:text-3xl md:font-normal">Loja de Livros</h2>
+                        <ul class="flex flex-wrap md:flex-no-wrap justify-center md:text-sm px-4 md:px-0 pb-2">
+                            <li>
+                                <a href="#" class="text-blue-600 underline hover:text-orange-650 px-1 border-r border-black">Livros em Oferta</a>
+                              </li>
+                              <li>
+                                <a href="#" class="text-blue-600 underline hover:text-orange-650 px-1 border-r border-black">Importados</a>
+                              </li>
+                              <li>
+                                <a href="#" class="text-blue-600 underline hover:text-orange-650 px-1 border-r border-black">Lançamentos</a>
+                              </li>
+                              <li>
+                                <a href="#" class="text-blue-600 underline hover:text-orange-650 px-1 border-r border-black">Universitários</a>
+                              </li>
+                              <li>
+                                <a href="#" class="text-blue-600 underline hover:text-orange-650 px-1 border-r border-black">Didáticos e Escolares</a>
+                              </li>
+                              <li>
+                                <a href="#" class="text-blue-600 underline hover:text-orange-650 px-1 border-r border-black">HQs e Mangás</a>
+                              </li>
+                              <li>
+                                <a href="#" class="text-blue-600 underline hover:text-orange-650 px-1 border-r border-black">Mais Vendidos</a>
+                              </li>
+                              <li>
+                                <a href="#" class="text-blue-600 underline hover:text-orange-650 px-1 border-r border-black">Livros Infantis</a>
+                              </li>
+                              <li>
+                                <a href="#" class="text-blue-600 underline hover:text-orange-650 px-1">Indicações</a>
+                              </li>
+                        </ul>
+                        <div class="h-2 border-b shadow-md"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
