--- a/14_amazon_clone/index.html
+++ b/14_amazon_clone/index.html
@@ -209,7 +209,7 @@
             </div>
 
             <!-- Conteúdo do Site -->
-            <div class="col-span-6 md:col-span-5 bg-gray-200 p-2">
+            <div class="col-span-6 md:col-span-5 p-2">
                 <div class="flex flex-col">
                     <!-- Título e Categorias -->
                     <div class="text-center">
@@ -244,6 +244,16 @@
                               </li>
                         </ul>
                         <div class="h-2 border-b shadow-md"></div>
+                    </div>
+
+                    <!-- Promoções e Categorias -->
+                    <div class="hidden md:block my-6">
+                        <img src="src/img/banner_promo.jpg" alt="Promoções">
+                    </div>
+                    <div class="flex flex-col md:flex-row items-center my-8 py-1">
+                        <p class="font-bold md:w-3/4 text-center md:border-r-2 border-gray-300 leading-5 pr-2 mt-10 md:mt-0">
+                            Assine o Amazon Prime para ter benefícios de leitura com o Prime Reading, frete GRÁTIS sem valor mínimo de compra e muito mais. Apenas R$ 9,90/mês.</p>
+                        <a href="#" class="btn-amazon-prime">Teste GRÁTIS por 30 dias</a>
                     </div>
                 </div>
             </div>
