--- a/14_amazon_clone/index.html
+++ b/14_amazon_clone/index.html
@@ -528,5 +528,82 @@
         </div>
       </div>
     </main>
+    <!-- Rodapé -->
+    <footer class="flex flex-col text-white">
+      <!-- Footer Superior -->
+      <div class="py-4 text-center bg-darkblue-600 hover:bg-darkblue-500 text-sm">
+        <p>Voltar ao Início</p>
+      </div>
+      <div class="flex flex-wrap md:flex-no-wrap md:justify-around py-10 md:px-20 bg-darkblue-700">
+        <div class="w-1/2 md:w-auto mb-4 md:mb-0">
+          <h4 class="font-bold mb-7">Conheça-nos</h4>
+          <ul class="text-xs w-3/4">
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Informações Corporativas</a>
+            </li>
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Carreiras</a>
+            </li>
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Comunicados a Imprensa</a>
+            </li>
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Comunidade</a>
+            </li>
+          </ul>
+        </div>
+        <div class="w-1/2 md:w-auto mb-4 md:mb-0">
+          <h4 class="font-bold mb-7">Conheça-nos</h4>
+          <ul class="text-xs w-3/4">
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Informações Corporativas</a>
+            </li>
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Carreiras</a>
+            </li>
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Comunicados a Imprensa</a>
+            </li>
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Comunidade</a>
+            </li>
+          </ul>
+        </div>
+        <div class="w-1/2 md:w-auto mb-4 md:mb-0">
+          <h4 class="font-bold mb-7">Conheça-nos</h4>
+          <ul class="text-xs w-3/4">
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Informações Corporativas</a>
+            </li>
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Carreiras</a>
+            </li>
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Comunicados a Imprensa</a>
+            </li>
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Comunidade</a>
+            </li>
+          </ul>
+        </div>
+        <div class="w-1/2 md:w-auto mb-4 md:mb-0">
+          <h4 class="font-bold mb-7">Conheça-nos</h4>
+          <ul class="text-xs w-3/4">
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Informações Corporativas</a>
+            </li>
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Carreiras</a>
+            </li>
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Comunicados a Imprensa</a>
+            </li>
+            <li class="mb-2 text-gray-400 hover:underline leading-4">
+              <a href="#">Comunidade</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
