--- a/14_amazon_clone/index.html
+++ b/14_amazon_clone/index.html
@@ -604,6 +604,49 @@
           </ul>
         </div>
       </div>
+      <!-- Footer Intermediário -->
+      <div class="hidden md:flex flex-col items-center bg-darkblue-700 border-t border-gray-700 pt-6 pb-4">
+        <img src="src/img/amazon_logo.png" alt="" class="w-20">
+        <ul class="flex flex-wrap justify-center text-xs pt-4 text-gray-400 w-3/4">
+          <li class="px-2 border-r border-gray-600 hover:underline">
+            <a href="#">Austrália</a>
+          </li>
+          <li class="px-2 border-r border-gray-600 hover:underline">
+            <a href="#">Austrália</a>
+          </li>
+          <li class="px-2 border-r border-gray-600 hover:underline">
+            <a href="#">Austrália</a>
+          </li>
+          <li class="px-2 border-r border-gray-600 hover:underline">
+            <a href="#">Austrália</a>
+          </li>
+          <li class="px-2 border-r border-gray-600 hover:underline">
+            <a href="#">Austrália</a>
+          </li>
+          <li class="px-2 border-r border-gray-600 hover:underline">
+            <a href="#">Austrália</a>
+          </li>
+          <li class="px-2 border-r border-gray-600 hover:underline">
+            <a href="#">Austrália</a>
+          </li>
+          <li class="px-2 border-r border-gray-600 hover:underline">
+            <a href="#">Austrália</a>
+          </li>
+          <li class="px-2 border-r border-gray-600 hover:underline">
+            <a href="#">Austrália</a>
+          </li>
+          <li class="px-2 border-r border-gray-600 hover:underline">
+            <a href="#">Austrália</a>
+          </li>
+          <li class="px-2 border-gray-600 hover:underline">
+            <a href="#">Austrália</a>
+          </li>
+        </ul>
+        <div class="flex text-xs">
+          <span class="text-gray-600 mr-2">E não se esqueça:</span>
+          <a href="#" class="text-gray-400 hover:underline">Amazon Web Services</a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
