--- a/14_amazon_clone/index.html
+++ b/14_amazon_clone/index.html
@@ -534,7 +534,7 @@
       <div class="py-4 text-center bg-darkblue-600 hover:bg-darkblue-500 text-sm">
         <p>Voltar ao Início</p>
       </div>
-      <div class="flex flex-wrap md:flex-no-wrap md:justify-around py-10 md:px-20 bg-darkblue-700">
+      <div class="flex flex-wrap md:flex-no-wrap md:justify-around px-4 py-10 md:px-20 bg-darkblue-700">
         <div class="w-1/2 md:w-auto mb-4 md:mb-0">
           <h4 class="font-bold mb-7">Conheça-nos</h4>
           <ul class="text-xs w-3/4">
@@ -646,6 +646,29 @@
           <span class="text-gray-600 mr-2">E não se esqueça:</span>
           <a href="#" class="text-gray-400 hover:underline">Amazon Web Services</a>
         </div>
+      </div>
+      <!-- Footer Inferior -->
+      <div class="flex flex-col items-center bg-darkblue-950 text-xs pt-8 md:pt-2">
+        <div class="flex flex-col md:flex-row mb-10">
+          <ul class="flex">
+            <li class="px-2 border-none md:border-r text-center md:text-left border-gray-600 hover:underline">
+              <a href="#">Condições de Uso</a>
+            </li>
+            <li class="px-2 border-none md:border-r text-center md:text-left md:border-gray-600 hover:underline">
+              <a href="#">Notificação de Privacidade</a>
+            </li>
+            <li class="px-2 border-none md:border-r text-center md:text-left border-gray-600 hover:underline">
+              <a href="#">Cookies</a>
+            </li>
+            <li class="px-2 border-none md:border-r text-center md:text-left border-gray-600 hover:underline">
+              <a href="#">Anúncios baseados em Interesse</a>
+            </li>
+          </ul>
+          <span class="text-center md:text-left mt-8 md:mt-0 ml-4 text-gray-600">
+            &copy; Amazon.com, Inc ou suas Afiliadas.
+          </span>
+        </div>
+        <p class="hidden md:block mb-10 text-gray-600">Amazon Serviços do Varejo do Brasil Ltda. | CNPJ: 15.436.940/0001-03</p>
       </div>
     </footer>
   </body>
